--- a/pom.xml
+++ b/pom.xml
@@ -37,18 +37,27 @@
         <module>demo-adapter-model-6-01</module>
         <module>demo-design-bridge-7-01</module>
         <module>demo-design-combin-8-01</module>
-        <module>action-08-strategy/action-08-strategy</module>
         <module>structure-07-agent</module>
+        <module>structure-05-aspect</module>
     </modules>
 
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>2.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.4</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
